<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.smartqueue.zadorozhnii.stanislav.smartqueue.LoginActivity"
    android:padding="15dp"
    android:gravity="center_vertical">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone"
        android:layout_gravity="center" />

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff">

        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="93dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/title_activity_login"
                android:id="@+id/textView"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:background="@color/btBackground"
                android:padding="15dp"
                android:layout_marginBottom="15dp"
                android:autoText="false"
                android:textColor="#ffffff"
                android:textSize="40dp" />

            <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
                android:layout_height="match_parent" android:hint="@string/prompt_email"
                android:inputType="textEmailAddress" android:maxLines="1"
                android:singleLine="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="10dp" />

            <EditText android:id="@+id/password" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified" android:inputType="textPassword"
                android:maxLines="1" android:singleLine="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp" />

            <Button android:id="@+id/email_sign_in_button" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="match_parent"
                android:layout_marginTop="16dp" android:text="@string/action_sign_in"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/btText"
                android:textStyle="bold"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="25dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
    <!---->